force-app/main/default/objects/IDR_Template_Detail__c/fields/IDR_Case_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>IDR_Case_Field_Name__c</fullName>
    <label>Case Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>