force-app/main/default/objects/IDR_Template_Detail__c/fields/IDR_Field_Description__c.field-meta.xml
<CustomField>
    <fullName>IDR_Field_Description__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>Description of the field. this value is displayed on the UI when prompting user input for free text fields</description>
    <label>Field Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>