force-app/main/default/objects/IDR_Template_Detail__c/fields/IDR_Is_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>IDR_Is_Free_Text__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>when checked,  this field on the template needs to be populated with user input , also the letter will need to go through approval process</description>
    <label>Is Free Text ?</label>
    <type>Checkbox</type>
</CustomField>