force-app/main/default/objects/IDR_Template_Detail__c/fields/IDR_sort_order__c.field-meta.xml
<CustomField>
    <fullName>IDR_sort_order__c</fullName>
    <label>sort order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>