force-app/main/default/objects/IDR_Template_Detail__c/fields/IDR_Template__c.field-meta.xml
<CustomField>
    <fullName>IDR_Template__c</fullName>
    <label>Template</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21 Day Letter</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
            <value>
                <fullName>21dl</fullName>
                <isActive>false</isActive>
                <label>21dl</label>
            </value>
            <value>
                <fullName>Gen</fullName>
                <isActive>false</isActive>
                <label>Gen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>