force-app/main/default/objects/IDR_Template_Detail__c/fields/IDR_Template_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>IDR_Template_Field_Name__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>fieldName that should be used by mulesoft to generate the payload</description>
    <label>Template Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>