force-app/main/default/objects/IDR_Template_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IDR_Template__c</columns>
    <columns>IDR_Template_Field_Name__c</columns>
    <columns>IDR_Case_Field_Name__c</columns>
    <columns>IDR_Is_Free_Text__c</columns>
    <columns>IDR_sort_order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>